# transcript-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIG.md  SETUP.md  TROUBLESHOOTING.md  WORKFLOW.md
docs/examples/osf/: README.md  config.yaml  label_addendum.md  tag_filter.md
docs/examples/osf/topics/: collection.xlsx  filter.xlsx
docs/steps/: clip.md  export.md  import.md  label.md  locations.md  summarize.md  topics.md
src/transcript_toolkit/: cli.py  errors.py  project.py  state.py
src/transcript_toolkit/core/: batch.py  cache.py  config.py  console.py  cost.py  docx.py  ids.py  llm.py  render.py  reviewdoc.py  sampling.py  tables.py  thresholds.py
src/transcript_toolkit/defaults/: pricing.yaml
src/transcript_toolkit/defaults/locations/: region_to_country.csv  regions.yaml
src/transcript_toolkit/defaults/prompts/: justify_locations.md  justify_topics.md  label_clips.md  segment_interview.md  summarize_interview.md  tag_locations.md  tag_topics.md
src/transcript_toolkit/steps/: cost.py  export.py  import_.py  status.py  summarize.py
tests/: test_batch.py  test_cache.py  test_chunking.py  test_cli.py  test_clip.py  test_config.py  test_console.py  test_cost.py  test_docx.py  test_export.py  test_ids.py  test_import.py  test_label.py  test_locations.py  test_project.py  test_state.py  test_summarize.py  test_taxonomy.py  test_topics.py
tests/fixtures/: Fake, Beta_SYNC.docx  Fake_Alpha_20240101_session1_SYNC.docx  Fake_Alpha_20240108_session2_SYNC.docx  make_fixtures.py
(+34 files in other folders)
