[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript-toolkit"
description = "Toolkit for processing oral history interview transcripts: clip, label, summarize, tag topics and locations, export."
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "openai>=2.41,<3",
    "pandas>=3.0,<4",
    "pyarrow>=24",
    "pydantic>=2.13,<3",
    "python-docx>=1.2",
    "pyyaml>=6",
    "python-dotenv>=1",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# The offline NER survey (`toolkit locations survey`) needs spaCy; the model is installed
# separately: python -m spacy download en_core_web_trf  (see docs/steps/locations.md).
survey = ["spacy[transformers]>=3.8,<4"]
dev = ["pytest>=8"]

[project.scripts]
toolkit = "transcript_toolkit.cli:main"
transcript-toolkit = "transcript_toolkit.cli:main"

[tool.setuptools.dynamic]
version = { attr = "transcript_toolkit.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transcript_toolkit = [
    "defaults/*.yaml",
    "defaults/prompts/*",
    "defaults/locations/*",
    "defaults/scaffold/*",
    "defaults/scaffold/advanced/*",
    "defaults/scaffold/topics/*",
]
